FIX: aligned footer bg

--- a/client/src/Footer/Footer.module.scss
+++ b/client/src/Footer/Footer.module.scss
@@ -1,8 +1,8 @@
 .footer{
-  background-image:url(/images/footer.png)!important;
+  background-image:url(/images/footer.png) !important;
   background-repeat: no-repeat;
-  background-position: center bottom;
-  background-size:100% 100%;
+  background-position: center 100px;
+  background-size:100% auto;
   height:70vh;
   min-height:460px;
 }
